# e2

./: Cargo.toml  README.md
core/: Cargo.toml  build.rs
core/src/: main.rs
custom/: Cargo.toml
custom/src/: lib.rs  lsp.rs  rss.rs
editor/: Cargo.toml
editor-buffer/: Cargo.toml
editor-buffer/src/: lib.rs
editor-helpers/: Cargo.toml
editor-helpers/src/: atum.rs  lib.rs
editor-lexer/: Cargo.toml
editor-lexer/src/: lib.rs
editor-macros/: Cargo.toml
editor-macros/src/: lib.rs
editor-tree-sitter/src/: lib.rs
editor/assets/: blur_h.comp  blur_h.spv  blur_v.comp  blur_v.spv  frag.spv  shader.frag  shader.vert  vert.spv
editor/src/: atum.rs  audioer.rs  audioer_blank.rs  buffer.rs  color.rs  command.rs  director.rs  gpu.rs  lexer.rs  lib.rs  messager.rs  session.rs  ts.rs  ui.rs  util.rs
src/: audioer.rs  buffer.rs  color.rs  command.rs  director.rs  gpu.rs  lexer.rs  main.rs  messager.rs  session.rs  util.rs
tracy/: Cargo.toml
tracy/src/: lib.rs
