[workspace]
members = ["editor", "core", "editor-macros", "custom"]
resolver = "2"

[workspace.dependencies]
editor = { path = "../editor" }
editor-macros = { path = "../editor-macros" }

raw-window-handle = "0.6"
rustc-edit-distance = "0.1.0"
memchr = "2.8.0"
cranelift-entity = "0.129.1"
smallstr = { version = "0.3", features = ["union"], default-features = false }
smallvec = "1.15.1"
paste = "1.0.15"
crossbeam-channel = { version = "0.5.15", default-features = false, features = ["std"] }
libloading = { version = "0.9.0", default-features = false, features = ["std"] }
tracy-client = { version = "0.17.3", default-features = false }

[profile.dev]
debug = false  # default off for everything

[profile.dev.package.editor]
debug = true

[profile.dev.package.core]
debug = true

[profile.dev.package.custom]
debug = true

[profile.dev.package.cranelift-entity]
debug = true

[profile.dev.package.rustc-edit-distance]
debug = true

[profile.dev.package.ropey]
debug = true

[profile.dev.package.smallvec]
debug = true

[profile.dev.package.smallstr]
debug = true

[profile.dev.package.libloading]
debug = true

[profile.dev.package.crossbeam-channel]
debug = true

[profile.release]
debug = 1

[profile.release-fast-but-without-lto]
inherits = "release"
opt-level = 3
panic = "abort"
lto = false
codegen-units = 1
debug = false
strip = true
debug-assertions = false
overflow-checks = false

[profile.release-fast]
inherits = "release"
opt-level = 3
panic = "abort"
codegen-units = 1
lto = "fat"
debug = false
strip = true
debug-assertions = false
overflow-checks = false

# Want a small binary? Do this:
# RUSTFLAGS="-Zunstable-options -Cpanic=immediate-abort -Zlocation-detail=none -Zfmt-debug=none" \
#     cargo +nightly b \
#         -Z build-std=std,panic_abort \
#         -Z build-std-features= \
#         --no-default-features \
#         --profile=release-small \
#         --target=x86_64-unknown-linux-gnu
[profile.release-small]
inherits = "release"
opt-level = "z"
panic = "abort"
codegen-units = 1
lto = "fat"
strip = true
debug = 0
overflow-checks = false
debug-assertions = false
