[package]
name = "core"
version = "0.1.0"
edition = "2024"

[features]
default = ["wayland", "x11"]

# profiling
tracy = ["tracy-client/enable"]

# allocators
mimalloc = ["dep:mimalloc", "custom/mimalloc"]
dhat = ["dep:dhat", "custom/dhat"]

wayland = ["winit/wayland", "winit/wayland-dlopen", "winit/wayland-csd-adwaita"]
x11     = ["winit/x11"]

[dependencies]
editor = { path = "../editor" }
custom = { path = "../custom" }

mimalloc = { version = "=0.1.47", optional = true }
dhat = { version = "0.3.3", default-features = false, optional = true }

winit              .workspace = true
crossbeam-channel  .workspace = true
libloading         .workspace = true
tracy-client       .workspace = true

ctrlc = "3.5.2"
notify = "8.2.0"
