[package]
name = "core"
version = "0.1.0"
edition = "2024"

[features]
default = ["audioer", "wayland", "bundled"]

bundled = ["sdl2/bundled"]
static-link = ["sdl2/static-link"]

audioer = ["editor/audioer", "custom/audioer"]

wayland = ["editor/wayland-data-control"]

# profiling
tracy = ["tracy/enable", "custom/tracy", "editor/tracy"]

# allocators
mimalloc = ["dep:mimalloc", "custom/mimalloc"]
dhat = ["dep:dhat", "custom/dhat"]

[dependencies]
editor = { path = "../editor" }
custom = { path = "../custom" }
tracy  = { path = "../tracy" }

mimalloc = { version = "=0.1.47", optional = true }
dhat = { version = "0.3.3", default-features = false, optional = true }

crossbeam-channel  .workspace = true
libloading         .workspace = true
raw-window-handle  .workspace = true

ctrlc = "3.5.2"
notify = "8.2.0"

sdl2 = { version = "0.38.0", features = ["raw-window-handle"] }
