[package]
name = "custom"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
editor = { path = "../editor" }
editor-macros = { path = "../editor-macros" }

rustc-edit-distance.workspace = true
memchr             .workspace = true
smallstr           .workspace = true
smallvec           .workspace = true
cranelift-entity   .workspace = true
paste              .workspace = true
winit              .workspace = true
wgpu               .workspace = true
