[package]
name = "custom"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[features]
default = ["wayland", "x11"]

# allocators
mimalloc = ["dep:mimalloc"]
dhat = ["dep:dhat"]

wayland = ["winit/wayland", "winit/wayland-dlopen", "winit/wayland-csd-adwaita"]
x11     = ["winit/x11"]

[dependencies]
editor = { path = "../editor" }
editor-macros = { path = "../editor-macros" }

mimalloc = { version = "=0.1.47", optional = true }
dhat = { version = "0.3.3", default-features = false, optional = true }

rustc-edit-distance.workspace = true
memchr             .workspace = true
smallstr           .workspace = true
smallvec           .workspace = true
cranelift-entity   .workspace = true
paste              .workspace = true
winit              .workspace = true
crossbeam-channel  .workspace = true

memmap2 = "0.9.10"
serde_json = "1.0.149"
