[package]
name = "custom"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[features]
default = ["audioer", "wayland"]

audioer = ["editor/audioer"]

wayland = ["editor/wayland-data-control"]

# profiling
tracy = ["tracy/enable", "editor/tracy"]

# allocators
mimalloc = ["dep:mimalloc"]
dhat = ["dep:dhat"]

[dependencies]
editor = { path = "../editor" }
editor-macros = { path = "../editor-macros" }
editor-helpers = { path = "../editor-helpers" }
tracy  = { path = "../tracy" }

mimalloc = { version = "=0.1.47", optional = true }
dhat = { version = "0.3.3", default-features = false, optional = true }

piece-tree         .workspace = true
rustc-edit-distance.workspace = true
memchr             .workspace = true
smallstr           .workspace = true
smallvec           .workspace = true
cranelift-entity   .workspace = true
paste              .workspace = true
crossbeam-channel  .workspace = true

memmap2 = "0.9.10"
serde_json = "1.0.149"
