[package]
name = "editor"
version = "0.1.0"
edition = "2024"

[features]
default = ["audioer", "wayland-data-control"]

audioer = ["dep:rodio"]

wayland-data-control = ["arboard/wayland-data-control"]

# profiling
tracy = ["tracy/enable"]

[dependencies]
memchr             .workspace = true
bytemuck           .workspace = true
piece-tree         .workspace = true
smallstr           .workspace = true
smallvec           .workspace = true
cranelift-entity   .workspace = true
paste              .workspace = true
crossbeam-channel  .workspace = true
libloading         .workspace = true
raw-window-handle  .workspace = true
dashmap            .workspace = true
rustc-hash         .workspace = true
nohash-hasher      .workspace = true

editor-helpers = { path = "../editor-helpers" }
editor-buffer = { path = "../editor-buffer" }
editor-lexer = { path = "../editor-lexer" }
tracy = { path = "../tracy" }

bitflags = "2.11.0"
tempfile = { version = "3.27.0", default-features = false }
swash = { version = "0.2.7", default-features = false, features = ["scale", "std", "render"] }
rodio = { version = "0.22.2", default-features = false, features = ["playback", "wav"], optional = true }
dirs = { version = "6.0.0", default-features = false }
arboard = { version = "3.6.1", default-features = false }
tree-sitter-rust = "0.24.2"
tree-sitter = "0.26.8"
gpu-allocator = "0.28"
ash = { version = "0.38" }#, features = ["linked"] }
ash-window = "0.13.0"
indexmap = "2.14.0"
arrayvec = "0.7.6"
